--- a/style.css
+++ b/style.css
@@ -145,6 +145,7 @@ body {
         text-decoration: none;
         color: var(--clr-primary-450);
         cursor: pointer;
+        font-size: 1.4rem;
       }
     }
   }
